# tapen

./: .flake8  .gitignore  .stylelintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tapen.spec  udev-rule.txt
.github/workflows/: backmerge.yml  sanity-check.yml
development/: apply-copyright.sh  copyright-update  copyright.json  copyright.tmpl  get-version.sh
examples/: temp.html
examples/demo-lib/template1/: manifest.yaml
src/: MANIFEST.in  setup.py
src/ptouch_py/: const.py  core.py  domain.py  registry.py  test_entrypoint.py
src/tapen/: __init__.py  __version__.py  cli.py  config.py  const.py  utils.py  validate.py
src/tapen/common/: __init__.py  domain.py
src/tapen/printer/: __init__.py  brother.py  common.py
src/tapen/renderer/: __init__.py  common.py  processor.py  weasyprint.py
src/tapen/renderer/resources/: default.css
src/tapen/resources/: label-base.html
src/tapen/resources/std-lib/default/: manifest.yaml
