[tool.poetry]
name = "tapen"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Tapen - software for managing label printers"
authors = ["Dmitry Berezovsky"]
maintainers = ["Dmitry Berezovsky"]
repository = "https://github.com/corvis/tapen"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    # Who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
    # License (should match "license" above)
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    # Python versions support
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "docs/pypi-description.md"
packages = [
    {include = "ptouch_py", from = "src"},
    {include = "tapen", from = "src"},
]
include = [
    "tapen/resources/*", "tapen/renderer/resources/*",
    "LICENSE", "README.md",
]

[tool.poetry.scripts]
tapen = "tapen.cli:default_entrypoint"
tpp = "tapen.cli:default_entrypoint"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
# PTouch
pyusb = "~1.2.1"
Pillow = ">=9.1.0"

# Tapen
cli-rack = { version = "~1.0.1", extras=["validation"] }
weasyprint="~=60.2"
pyyaml = ">=5.0.0"
appdirs = ">=1.4.4"
jinja2 = ">=3.0.0, <4.0.0"
python-poppler = "~=0.4.1"

[tool.poetry.dev-dependencies]
# Dev tools
black = "~=22.3"
licenseheaders = "~=0.8"
flake8 = "~=4.0"
isort = "~=5.11"
mypy = ">=1.0.1"
pre-commit = "~=2.19"
commitizen = "~=2.42.1"
mistune = ">=3.0.0"
pyinstaller = "~=6.3"

# Type checking
types-PyYAML = ">=5.0.0"
types-Pillow = ">=10.0.0"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "true"
atomic = "true"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_errors = false
warn_return_any = false
disallow_any_generics = false
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = ["test_.*\\.py$", ]

[[tool.mypy.overrides]]
module = ["examples"]
ignore_errors = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["weasyprint.*", "cli_rack_validation.*", "cli_rack.*", "usb.*", "appdirs.*", "poppler.*"]
ignore_missing_imports = true
follow_imports = "skip"